@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-21T16:25:21Z",
-  "count_outdated" : 1855,
-  "uniques_outdated" : 382,
-  "count" : 2138,
+  "timestamp" : "2022-05-22T01:33:39Z",
+  "count_outdated" : 1858,
+  "uniques_outdated" : 383,
+  "count" : 2140,
   "uniques" : 422,
   "clones" : [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 8,
