@@ -1,12 +1,7 @@
 {
-  "count": 283,
+  "count": 282,
   "uniques": 21,
   "clones": [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 8,
